--- a/cappy/shifty/templates/shifty/signin.html
+++ b/cappy/shifty/templates/shifty/signin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Shifti</title>
-    <link rel="stylesheet" type="text/css" href="{% static '/bstheme.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'shifty/bstheme.css' %}">
 <style>
     table {
         margin-top: 5%;
