--- a/cappy/shifty/static/shifty/space.css
+++ b/cappy/shifty/static/shifty/space.css
@@ -1,3 +1,5 @@
+/*line 106 table font size */
+
 /*!
  * Bootswatch v4.1.3
  * Homepage: https://bootswatch.com
@@ -106,8 +108,12 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
 table, th {
-    /*font-size: 1rem;*/
-  border: 1px solid lightgrey;
+    font-size: 14px;
+    border: 1px solid lightgrey;
+    /*width: 300px*/
+}
+tbody {
+    width: 300px
 }
 .header{
   width: 100%;
@@ -115,8 +121,8 @@ table, th {
 
 body {
   margin: 0;
-  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";  font-size: 1rem;
-  font-size 1rem;
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
   color: #777;
@@ -1737,6 +1743,7 @@ pre code {
 
 .table tbody + tbody {
   border-top: 2px solid #dee2e6;
+    width: 300px
 }
 
 .table .table {
@@ -2020,7 +2027,7 @@ pre code {
   width: 100%;
   height: calc(2.25rem + 2px);
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 14px;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -2101,7 +2108,7 @@ select.form-control:focus::-ms-value {
 .col-form-label-lg {
   padding-top: calc(0.5rem + 1px);
   padding-bottom: calc(0.5rem + 1px);
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5;
 }
 
@@ -2141,7 +2148,7 @@ select.form-control:focus::-ms-value {
 .form-control-lg {
   height: calc(2.875rem + 2px);
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.3rem;
 }
