--- a/cappy/shifty/static/shifty/space.css
+++ b/cappy/shifty/static/shifty/space.css
@@ -44,7 +44,9 @@
   --font-family-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
-
+.fc-unthemed td.fc-today {
+background: rgba(63, 152, 71, 0.6);
+}
 .ui-datepicker-prev {
     background-color: #ffffff;
     margin-right: 10%;
@@ -71,9 +73,6 @@
     background-color: #ffffff;
 }
 
-/*tr:nth-child(even) {*/
-/*background-color: #3b72b5;*/
-/*}*/
 *,
 *::before,
 *::after {
@@ -94,6 +93,7 @@ html {
     border: none;
 }
 .fc-content {
+  font-size: small;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#067020), color-stop(50%, #509a62), to(#200670));
   background-image: linear-gradient(#067020, #509a62 50%, #200670);
   background-repeat: no-repeat;
