wip (before presentation)

--- a/cappy/shifty/static/shifty/bstheme.css
+++ b/cappy/shifty/static/shifty/bstheme.css
@@ -5749,6 +5749,7 @@ button.close {
   background-color: transparent;
   border: 0;
   -webkit-appearance: none;
+  float: left;
 }
 
 .modal-open {
