--- a/cappy/shifty/templates/shifty/base_generic.html
+++ b/cappy/shifty/templates/shifty/base_generic.html
@@ -230,13 +230,6 @@
     </div>
 </div>
 
-<!--<aside>-->
-    <!--<div id="btntheme" style="text-align: center">-->
-    <!--<button type="button" class="btn btn-primary btn-sm" id='day'>Dark Theme</button>-->
-    <!--<button type="button" class="btn btn-primary btn-sm" id='night'>Light Theme</button>-->
-    <!--</div>-->
-<!--</aside>-->
-
 
 <div class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
@@ -244,7 +237,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">Create new event</h4>
+                <h4 class="modal-title">Request Day</h4>
             </div>
             <div class="modal-body">
                 <div class="row">
