--- a/cappy/shifty/templates/shifty/todo.html
+++ b/cappy/shifty/templates/shifty/todo.html
@@ -73,7 +73,7 @@
 </head>
 <body>
 <img src="{% static 'shifty/shiftilogo.png' %}"/> <br>
-<p>kagomemiller@gmail.com</p><br>
+<br>
 <h>Management only features via admin panel:</h>
 <ul>
   <li>Add/subtract employees.</li>
@@ -86,6 +86,7 @@
 <ul>
   <li>Color coded labels to differentiate all day and half day requests.</li>
   <li>Select specific hours, if half day.</li>
+  <li>Color code reasons for time off. i.e. personal time, military, etc.</li>
   <li></li>
 </ul>
 </body>
