--- a/cappy/templates/shifty/base_generic.html
+++ b/cappy/templates/shifty/base_generic.html
@@ -15,9 +15,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.print.css" rel="stylesheet"
           media="print"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'shifty/bstheme.css' %}" title="default">
-    <link rel="stylesheet" type="text/css" href="{% static 'shifty/space.css' %}" title="alternate">
-    <script type="text/javascript" src="{% static 'shifty/styleswitcher.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'shifty/../bstheme.css' %}" title="default">
+    <link rel="stylesheet" type="text/css" href="{% static 'shifty/../space.css' %}" title="alternate">
+    <script type="text/javascript" src="{% static 'shifty/../styleswitcher.js' %}"></script>
 
     <style>
         #btntheme {
@@ -214,7 +214,7 @@
                 </table>
                 <br>
                 <button class='btn btn-primary' id="logout" onclick="log_out()">Log Out</button>
-                <img src="{% static 'shifty/shiftilogo.png' %}"/>
+                <img src="{% static 'shifty/../shiftilogo.png' %}"/>
             </div>
         </aside>
     </div>
