--- a/cappy/templates/shifty/signin.html
+++ b/cappy/templates/shifty/signin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Shifti</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'shifty/bstheme.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'shifty/../bstheme.css' %}">
 <style>
     table {
         margin-top: 5%;
@@ -22,7 +22,7 @@
 </style>
 </head>
 <body>
-<img src="{% static 'shifty/shiftilogo.png' %}"/>
+<img src="{% static 'shifty/../shiftilogo.png' %}"/>
 <table align="center">
     <tr>
         <td>
