--- a/cappy/templates/shifty/todo.html
+++ b/cappy/templates/shifty/todo.html
@@ -30,7 +30,7 @@
 <head>
     <meta charset="UTF-8">
     <title>To Do</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'shifty/bstheme.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'shifty/../bstheme.css' %}">
 <style>
     table {
         margin-top: 5%;
@@ -72,7 +72,7 @@
 </style>
 </head>
 <body>
-<img src="{% static 'shifty/shiftilogo.png' %}"/> <br>
+<img src="{% static 'shifty/../shiftilogo.png' %}"/> <br>
 <br>
 <h>Management only features via admin panel:</h>
 <ul>
